--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -81,7 +81,7 @@
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                     <p class="lead">
-                                        Note this allows you to have one less password in the world to remember!
+                                        Note: This prevents you creating yet another new password in the world to remember! Or worse, using the same one again ;-)
                                     </p>
                                     <p>
                                         We only use the social id for identity and nothing more (e.g. access to
