--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -21,7 +21,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
-                <span class="ttt-icon-writing display-5">Time to TEACH</span>
+                <span class="ttt-icon-writing display-5">Time to TEACH Zone</span>
             </a>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
@@ -63,6 +63,7 @@
                 <h2 class="display-5">Easy planning for busy teachers</h2>
                 <p>Designed specfically for primary school teachers</p>
                 <a href="#about" class="btn btn-lg btn-success">Learn more</a>
+                <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
             </div>
         </div>
 
