--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -37,7 +37,7 @@
                 </button>
                 <a class="navbar-brand" href="/">
                     <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
-                    <span class="ttt-icon-writing display-5">Time to TEACH</span>
+                    <span class="ttt-icon-writing display-5">Time to TEACH Zone</span>
                 </a>
 
                 <div id="app-main-screen-title">
