--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 ">
-                        <img class="center img-circle-standard" src="@userPictureUri" height="64px">
+                        <img class="center img-circle-standard-new-signup" src="@userPictureUri" height="64px">
                     </div>
                 </div>
                 <div class="row">
