--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -60,8 +60,10 @@
         <div id="stage">
             <div id="stage-caption">
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
-                <h2 class="display-5">Easy planning for busy teachers</h2>
-                <p>Designed specfically for primary school teachers</p>
+                <h2 class="display-5">Easy planning for busy primary teachers</h2>
+                <br>
+                <p>Designed specifically for the Scottish Curriculum for Excellence</p>
+                <br>
                 <a href="#about" class="btn btn-lg btn-success">Learn more</a>
                 <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
             </div>
