--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -103,7 +103,8 @@ img {
 }
 
 #ttt-logo-front-page {
-    margin-bottom: 2.5rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
 }
 
 #follow-us {
