--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -60,8 +60,7 @@
         <div id="stage">
             <div id="stage-caption">
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
-                <h2 class="display-5">Easy planning for busy primary teachers</h2>
-                <br>
+                <h2 id="ttt-h5-front-page" class="display-5">Easy planning for busy primary teachers</h2>
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
                 <a href="#about" class="btn btn-lg btn-success">Learn more</a>
