--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -50,8 +50,11 @@
                     <li class="nav-item nav-login-button">
                         <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary" href="@routes.UserSignupController.signupStep1()">Sign up</a>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="@routes.UserSignupController.signupStep1()">Sign up</a>
+                    </li>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">Join Facebook group</a>
                     </li>
                 </ul>
             </div>
@@ -63,8 +66,12 @@
                 <h2 id="ttt-h5-front-page" class="display-5">Easy planning for busy primary teachers</h2>
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
-                <a href="#about" class="btn btn-lg btn-success">Learn more</a>
-                <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
+                <p>
+                    <a href="#about" class="btn btn-lg btn-success">Learn more</a>
+                    <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
+                </p>
+                <a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">
+                    Join Facebook group</a>
             </div>
         </div>
 
