--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -30,45 +30,56 @@
 
 
         <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
-                aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" href="/">
-                    <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
-                    <span class="ttt-icon-writing display-5">Time to TEACH Zone</span>
-                </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
+            aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
+                <span class="ttt-icon-writing display-5">Time to TEACH Zone</span>
+            </a>
 
-                <div id="app-main-screen-title">
-                    <h4 class="display-5 text-center">@title</h4>
-                </div>
+            <div id="app-main-screen-title">
+                <h4 class="display-5 text-center">@title</h4>
+            </div>
 
-                <div class="collapse navbar-collapse" id="startupNavbar">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <div class="collapse navbar-collapse" id="startupNavbar">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="@routes.Application.timeToTeachApp()">Dashboard</a>
+                    </li>
+
+                    @if(userPictureUri.isDefined) {
                         <li class="nav-item">
-                            <a class="nav-link" href="@routes.Application.timeToTeachApp()">Dashboard</a>
+                            <a class="nav-link" href="#"><img class="img-circle-standard" src="@userPictureUri" height="32px"></a>
                         </li>
-
-                        @if(userPictureUri.isDefined) {
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img class="img-circle-standard" src="@userPictureUri" height="32px"></a>
-                            </li>
-                        }
-                        <div class="row row-for-mobile"><br></div>
-                        <li class="nav-item nav-login-button">
-                        @if(userFirstName.isDefined) {
-                            <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
-                        } else {
-                            <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
-                        }
-                        </li>
-                    </ul>
-                </div>
+                    }
+                    <div class="row row-for-mobile"><br></div>
+                    <li class="nav-item nav-login-button">
+                    @if(userFirstName.isDefined) {
+                        <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
+                    } else {
+                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                    }
+                    </li>
+                </ul>
+            </div>
         </nav>
 
         <div id="appBackground">
             <div id="mainAppTopMargin"></div>
+
+            <div class="container">
+                <div id="class-timetable-subject-warning" class="alert alert-danger alert-dismissible fade show text-center" role="alert" >
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+
+                    <p>Note: This is a development version of Time To Teach Zone. It is for playing around with and giving an opportunity for early feedback</p>
+                </div>
+            </div>
+
             @content
         </div>
 
