--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -63,6 +63,9 @@
                         <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
                     }
                     </li>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">Join Facebook group</a>
+                    </li>
                 </ul>
             </div>
         </nav>
