--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -21,7 +21,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
-                <span class="ttt-icon-writing display-5">Time to TEACH Zone</span>
+                <span class="ttt-icon-writing-main display-5">Time to TEACH Zone</span>
             </a>
 
             <div class="collapse navbar-collapse" id="startupNavbar">
