--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -24,7 +24,7 @@
                 <span class="ttt-icon-writing-main display-5">Time to TEACH Zone</span>
             </a>
 
-            <div class="collapse navbar-collapse" id="startupNavbar">
+            <div class="collapse navbar-collno-repeatapse" id="startupNavbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
