--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -11,7 +11,7 @@
                     <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
                         Class Timetable</a>
                     <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Termly Plans</button>
-                    <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plan</button>
+                    <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
                 </div>
                 <div class="col-md-1">
                 </div>
