--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -100,14 +100,14 @@ img {
     background: url('/assets/images/stage.jpeg') center center no-repeat;
     background-size: cover;
     color: white;
-    height: 100%;
+    height: auto;
     width: 100%;
     display: flex;
     align-items: center;
 }
 
 #ttt-logo-front-page {
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 3rem;
 }
 
