--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -48,13 +48,13 @@
                     </li>
 
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log In</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="@routes.UserSignupController.signupStep1()">Sign up</a>
+                        <a class="btn btn-outline-primary" href="@routes.UserSignupController.signupStep1()">Sign Up</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">Join Facebook group</a>
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">Facebook Group</a>
                     </li>
                 </ul>
             </div>
@@ -67,11 +67,11 @@
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
                 <br>
                 <p>
-                    <a href="#about" class="btn btn-lg btn-success">Learn more</a>
+                    <a href="#about" class="btn btn-lg btn-success">Learn More</a>
                     <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
                 </p>
                 <a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">
-                    Join Facebook group</a>
+                    Facebook Group</a>
             </div>
         </div>
 
