--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -53,8 +53,14 @@
                         <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Sign up</a>
+                        <a class="btn btn-outline-primary" href="#">Sign up</a>
                     </li>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">
+                            <img src="@routes.Assets.versioned("icons/FB-f-Logo__blue_29.png")" alt="logo" height="19">
+                            Facebook Group</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
