--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -54,7 +54,9 @@
                         <a class="btn btn-outline-primary" href="@routes.UserSignupController.signupStep1()">Sign Up</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">Facebook Group</a>
+                        <a class="btn btn-outline-primary" href="https://www.facebook.com/groups/305966139892476/">
+                            <img src="@routes.Assets.versioned("icons/FB-f-Logo__blue_29.png")" alt="logo" height="19">
+                            Facebook Group</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +73,9 @@
                     <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-primary">Sign Up</a>
                 </p>
                 <a id="facebook-group-button" class="btn btn-primary btn-lg" href="https://www.facebook.com/groups/305966139892476/">
-                    Facebook Group</a>
+                    <img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="29">
+                    Join Our Facebook Group
+                </a>
             </div>
         </div>
 
