--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -111,6 +111,10 @@ img {
     margin-bottom: 3rem;
 }
 
+.facebook-group-icon {
+    margin-right: 0.5rem;
+}
+
 #ttt-h5-front-page {
     margin-bottom: 2rem;
 }
