--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -64,10 +64,9 @@
                     <div id="subject-art" class="btn rounded subject-art class-timetable-button"
                     type="button" draggable="true">Art</div>
                 </div>
-
                 <div class="col-sm-2">
-                    <div id="subject-physical-education" class="btn rounded subject-physical-education class-timetable-button"
-                    type="button" draggable="true">P.E.</div>
+                    <div id="subject-history" class="btn rounded subject-history class-timetable-button"
+                    type="button" draggable="true">History</div>
                 </div>
                 <div class="col-sm-2">
                     <div id="subject-golden-time" class="btn rounded subject-golden-time class-timetable-button"
@@ -93,8 +92,8 @@
                     type="button" draggable="true">Music</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-health" class="btn rounded subject-health class-timetable-button"
-                    type="button" draggable="true">Health</div>
+                    <div id="subject-geography" class="btn rounded subject-geography class-timetable-button"
+                    type="button" draggable="true">Geography</div>
                 </div>
                 <div class="col-sm-2">
                     <div id="subject-rme" class="btn rounded subject-rme class-timetable-button"
@@ -120,19 +119,48 @@
                     type="button" draggable="true">Drama</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-topic" class="btn rounded subject-topic class-timetable-button"
-                    type="button" draggable="true">IDL</div>
+                    <div id="subject-modern-languages" class="btn rounded subject-modern-languages class-timetable-button"
+                    type="button" draggable="true">Modern Languages</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-assembly" class="btn rounded subject-assembly class-timetable-button"
-                    type="button" draggable="true">Assembly</div>
+                    <div id="subject-physical-education" class="btn rounded subject-physical-education class-timetable-button"
+                    type="button" draggable="true">P.E.</div>
                 </div>
                 <div class="col-sm-2">
                     <div id="subject-teacher-covertime" class="btn rounded subject-teacher-covertime class-timetable-button"
                     type="button" draggable="true">RCCT</div>
                 </div>
+            </div>
+
+            <div class="row justify-content-center class-timetable-subject-row">
+                <div class="col-sm-2">
+                    <div id="subject-hand-writing" class="btn rounded subject-hand-writing class-timetable-button"
+                    type="button" draggable="true">Handwriting</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-science" class="btn rounded subject-science class-timetable-button"
+                    type="button" draggable="true">Science</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-play" class="btn rounded subject-play class-timetable-button"
+                    type="button" draggable="true">Play</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-topic" class="btn rounded subject-topic class-timetable-button"
+                    type="button" draggable="true">IDL</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-health" class="btn rounded subject-health class-timetable-button"
+                    type="button" draggable="true">Health</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-assembly" class="btn rounded subject-assembly class-timetable-button"
+                    type="button" draggable="true">Assembly</div>
+                </div>
+
 
             </div>
+
         </div>
     </aside>
 
