--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="startupNavbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     @if(showFrontPageFeatures) {
                         <li class="nav-item">
@@ -62,7 +62,7 @@
             </div>
         </nav>
 
-        <div id="stage">
+        <div id="home">
             <div id="stage-caption">
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
                 <h2 id="ttt-h5-front-page" class="display-5">Easy planning for busy primary teachers</h2>
