--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -3,7 +3,7 @@
 @import controllers.serviceproxies.TimeToTeachUserId
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, className: String,tttUserId: TimeToTeachUserId)(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, s"Class Timetable : $className ",
+@timetoteachAppMain(handler, s"Class Timetable - $className ",
     userPictureUri, userFirstName, userFamilyName) {
 
     <div class="container">
